[tool.poetry]
name = "leo"
version = "0.1.0"
description = ""
authors = ["Yeojin Kim <yeojin.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
isort = "^5.0.9"
flake8 = "^3.8.3"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
